deployments/monitoring/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-issuer"
spec:
  ingressClassName: "nginx"
  tls:
    - hosts:
      - monitoring.lsst.codes
      secretName: monitoring-tls
  rules:
    - host: monitoring.lsst.codes
      http:
        paths:
          - path: /chronograf
            pathType: Prefix
            backend:
              service:
                name: monitoring-chronograf
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: monitoring-influxdb2
                port:
                  name: http
